Refactor `runEsqlAsync` to support text format