@@ -52,7 +52,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 import java.util.function.IntFunction;
 
@@ -72,6 +71,7 @@ import static org.hamcrest.Matchers.any;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.either;
 import static org.hamcrest.Matchers.emptyOrNullString;
+import static org.hamcrest.Matchers.emptyString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.is;
@@ -355,7 +355,9 @@ public abstract class RestEsqlTestCase extends ESRestTestCase {
         var builder = requestObjectBuilder().query(fromIndex() + " | keep keyword, integer | sort integer asc | limit 100");
         assertEquals(
             expectedTextBody("txt", count, null),
-            mode == ASYNC ? runEsqlAsyncAsTextWithFormat(builder, "txt", null) : runEsqlAsTextWithFormat(builder, "txt", null)
+            mode == ASYNC
+                ? runEsqlAsync(builder, new AssertWarnings.NoWarnings(), "txt", null).get("result")
+                : runEsqlAsTextWithFormat(builder, "txt", null)
         );
 
     }
@@ -366,7 +368,9 @@ public abstract class RestEsqlTestCase extends ESRestTestCase {
         var builder = requestObjectBuilder().query(fromIndex() + " | keep keyword, integer | sort integer asc | limit 100");
         assertEquals(
             expectedTextBody("csv", count, '|'),
-            mode == ASYNC ? runEsqlAsyncAsTextWithFormat(builder, "csv", '|') : runEsqlAsTextWithFormat(builder, "csv", '|')
+            mode == ASYNC
+                ? runEsqlAsync(builder, new AssertWarnings.NoWarnings(), "csv", '|').get("result")
+                : runEsqlAsTextWithFormat(builder, "csv", '|')
         );
     }
 
@@ -376,7 +380,9 @@ public abstract class RestEsqlTestCase extends ESRestTestCase {
         var builder = requestObjectBuilder().query(fromIndex() + " | keep keyword, integer | sort integer asc | limit 100");
         assertEquals(
             expectedTextBody("tsv", count, null),
-            mode == ASYNC ? runEsqlAsyncAsTextWithFormat(builder, "tsv", null) : runEsqlAsTextWithFormat(builder, "tsv", null)
+            mode == ASYNC
+                ? runEsqlAsync(builder, new AssertWarnings.NoWarnings(), "tsv", null).get("result")
+                : runEsqlAsTextWithFormat(builder, "tsv", null)
         );
     }
 
@@ -1048,6 +1054,15 @@ public abstract class RestEsqlTestCase extends ESRestTestCase {
     }
 
     public static Map<String, Object> runEsqlAsync(RequestObjectBuilder requestObject, AssertWarnings assertWarnings) throws IOException {
+        return runEsqlAsync(requestObject, assertWarnings, null, null);
+    }
+
+    public static Map<String, Object> runEsqlAsync(
+        RequestObjectBuilder requestObject,
+        AssertWarnings assertWarnings,
+        @Nullable String format,
+        @Nullable Character delimiter
+    ) throws IOException {
         addAsyncParameters(requestObject);
         requestObject.build();
         Request request = prepareRequest(ASYNC);
@@ -1057,10 +1072,23 @@ public abstract class RestEsqlTestCase extends ESRestTestCase {
         options.setWarningsHandler(WarningsHandler.PERMISSIVE); // We assert the warnings ourselves
         options.addHeader("Content-Type", mediaType);
 
-        if (randomBoolean()) {
-            options.addHeader("Accept", mediaType);
+        boolean isTextFormat = format != null;
+        boolean addParam = randomBoolean();
+        if (addParam == false) {
+            if (isTextFormat) {
+                switch (format) {
+                    case "txt" -> options.addHeader("Accept", "text/plain");
+                    case "csv" -> options.addHeader("Accept", "text/csv");
+                    case "tsv" -> options.addHeader("Accept", "text/tab-separated-values");
+                }
+            } else {
+                options.addHeader("Accept", mediaType);
+            }
         } else {
-            request.addParameter("format", requestObject.contentType().queryParameter());
+            request.addParameter("format", isTextFormat ? format : requestObject.contentType().queryParameter());
+        }
+        if (delimiter != null) {
+            request.addParameter("delimiter", String.valueOf(delimiter));
         }
         request.setOptions(options);
 
@@ -1071,40 +1099,72 @@ public abstract class RestEsqlTestCase extends ESRestTestCase {
         Response response = performRequest(request);
         HttpEntity entity = response.getEntity();
 
+        Map<String, Object> json = null;    // used for XContentType
         Object initialColumns = null;
         Object initialValues = null;
-        var json = entityToMap(entity, requestObject.contentType());
-        checkKeepOnCompletion(requestObject, json);
-        String id = (String) json.get("id");
+        if (isTextFormat) {
+            // get the content, it could be empty because the request might have not completed
+            initialValues = Streams.copyToString(new InputStreamReader(entity.getContent(), StandardCharsets.UTF_8));
+        } else {
+            json = entityToMap(entity, requestObject.contentType());
+        }
+
+        // If keep_on_completion is set then an id must always be present, regardless of the value of any other property.
+        String id = isTextFormat ? response.getHeader(HEADER_NAME_ASYNC_ID) : (String) json.get("id");
+        if (requestObject.keepOnCompletion()) {
+            assertThat(id, not(emptyOrNullString()));
+        }
 
         var supportsAsyncHeaders = clusterHasCapability("POST", "/_query", List.of(), List.of("async_query_status_headers")).orElse(false);
-
+        boolean isRunning = isTextFormat
+            ? Boolean.parseBoolean(response.getHeader(HEADER_NAME_ASYNC_RUNNING))
+            : (boolean) json.get("is_running");
         if (id == null) {
             // no id returned from an async call, must have completed immediately and without keep_on_completion
             assertThat(requestObject.keepOnCompletion(), either(nullValue()).or(is(false)));
-            assertThat((boolean) json.get("is_running"), is(false));
+            assertThat(isRunning, is(false));
             if (supportsAsyncHeaders) {
                 assertThat(response.getHeader("X-Elasticsearch-Async-Id"), nullValue());
                 assertThat(response.getHeader("X-Elasticsearch-Async-Is-Running"), is("?0"));
             }
             assertWarnings(response, assertWarnings);
-            json.remove("is_running"); // remove this to not mess up later map assertions
-            return Collections.unmodifiableMap(json);
+            if (isTextFormat) {
+                return Map.of("result", initialValues);
+            } else {
+                json.remove("is_running"); // remove this to not mess up later map assertions
+                return Collections.unmodifiableMap(json);
+            }
         } else {
             // async may not return results immediately, so may need an async get
             assertThat(id, is(not(emptyOrNullString())));
-            boolean isRunning = (boolean) json.get("is_running");
             if (isRunning == false) {
                 // must have completed immediately so keep_on_completion must be true
                 assertThat(requestObject.keepOnCompletion(), is(true));
                 assertWarnings(response, assertWarnings);
                 // we already have the results, but let's remember them so that we can compare to async get
-                initialColumns = json.get("columns");
-                initialValues = json.get("values");
+                if (isTextFormat == false) {
+                    initialColumns = json.get("columns");
+                    initialValues = json.get("values");
+                }
             } else {
                 // did not return results immediately, so we will need an async get
-                assertThat(json.get("columns"), is(equalTo(List.<Map<String, String>>of()))); // no partial results
-                assertThat(json.get("pages"), nullValue());
+                if (isTextFormat) {
+                    // different format modes return different results.
+                    switch (format) {
+                        case "txt" -> assertThat((String) initialValues, emptyString());
+                        case "csv" -> {
+                            assertEquals(initialValues, "\r\n");
+                            initialValues = null;
+                        }
+                        case "tsv" -> {
+                            assertEquals(initialValues, "\n");
+                            initialValues = null;
+                        }
+                    }
+                } else {
+                    assertThat(json.get("columns"), is(equalTo(List.<Map<String, String>>of()))); // no partial results
+                    assertThat(json.get("pages"), nullValue());
+                }
             }
 
             if (supportsAsyncHeaders) {
@@ -1114,22 +1174,38 @@ public abstract class RestEsqlTestCase extends ESRestTestCase {
 
             // issue a second request to "async get" the results
             Request getRequest = prepareAsyncGetRequest(id);
+            if (delimiter != null) {
+                getRequest.addParameter("delimiter", String.valueOf(delimiter));
+            }
+            // If the `format` parameter is not added, the GET request will return a response
+            // with the `Content-Type` type due to the lack of an `Accept` header.
+            if (addParam && isTextFormat) {
+                getRequest.addParameter("format", format);
+            }
             getRequest.setOptions(options);
             response = performRequest(getRequest);
             entity = response.getEntity();
         }
 
-        var result = entityToMap(entity, requestObject.contentType());
-
-        // assert initial contents, if any, are the same as async get contents
-        if (initialColumns != null) {
-            assertEquals(initialColumns, result.get("columns"));
-            assertEquals(initialValues, result.get("values"));
-        }
-
         assertWarnings(response, assertWarnings);
         assertDeletable(id);
-        return removeAsyncProperties(result);
+
+        if (isTextFormat) {
+            var result = Streams.copyToString(new InputStreamReader(entity.getContent(), StandardCharsets.UTF_8));
+            // assert initial contents, if any, are the same as async get contents
+            if (initialValues != null && ((String) initialValues).isEmpty() == false) {
+                assertEquals(initialValues, result);
+            }
+            return Map.of("result", result);
+        } else {
+            var result = entityToMap(entity, requestObject.contentType());
+            // assert initial contents, if any, are the same as async get contents
+            if (initialColumns != null) {
+                assertEquals(initialColumns, result.get("columns"));
+                assertEquals(initialValues, result.get("values"));
+            }
+            return removeAsyncProperties(result);
+        }
     }
 
     // Removes async properties, otherwise consuming assertions would need to handle sync and async differences
@@ -1157,13 +1233,6 @@ public abstract class RestEsqlTestCase extends ESRestTestCase {
         requestObject.waitForCompletion(TimeValue.timeValueNanos(randomIntBetween(1, 100)));
         requestObject.keepOnCompletion(randomBoolean());
         requestObject.keepAlive(TimeValue.timeValueDays(randomIntBetween(1, 10)));
-    }
-
-    // If keep_on_completion is set then an id must always be present, regardless of the value of any other property.
-    static void checkKeepOnCompletion(RequestObjectBuilder requestObject, Map<String, Object> json) {
-        if (requestObject.keepOnCompletion()) {
-            assertThat((String) json.get("id"), not(emptyOrNullString()));
-        }
     }
 
     static void assertDeletable(String id) throws IOException {
@@ -1203,95 +1272,6 @@ public abstract class RestEsqlTestCase extends ESRestTestCase {
 
         HttpEntity entity = performRequest(request, new AssertWarnings.NoWarnings());
         return Streams.copyToString(new InputStreamReader(entity.getContent(), StandardCharsets.UTF_8));
-    }
-
-    static String runEsqlAsyncAsTextWithFormat(RequestObjectBuilder builder, String format, @Nullable Character delimiter)
-        throws IOException {
-        Request request = prepareRequest(ASYNC);
-        addAsyncParameters(builder);
-
-        String mediaType = attachBody(builder.build(), request);
-        RequestOptions.Builder options = request.getOptions().toBuilder();
-        options.addHeader("Content-Type", mediaType);
-
-        boolean addParam = randomBoolean();
-        if (addParam) {
-            request.addParameter("format", format);
-        } else {
-            switch (format) {
-                case "txt" -> options.addHeader("Accept", "text/plain");
-                case "csv" -> options.addHeader("Accept", "text/csv");
-                case "tsv" -> options.addHeader("Accept", "text/tab-separated-values");
-            }
-        }
-        if (delimiter != null) {
-            request.addParameter("delimiter", String.valueOf(delimiter));
-        }
-        request.setOptions(options);
-        Response response = performRequest(request);
-        HttpEntity entity = response.getEntity();
-
-        // get the content, it could be empty because the request might have not completed
-        String initialValue = Streams.copyToString(new InputStreamReader(entity.getContent(), StandardCharsets.UTF_8));
-
-        String id = response.getHeader(HEADER_NAME_ASYNC_ID);
-        if (builder.keepOnCompletion()) {
-            assertThat(id, not(emptyOrNullString()));
-        }
-
-        if (id == null) {
-            // no id returned from an async call, must have completed immediately and without keep_on_completion
-            assertThat(builder.keepOnCompletion(), either(nullValue()).or(is(false)));
-            assertNull(response.getHeader("is_running"));
-            // the content cant be empty
-            assertThat(initialValue, not(emptyOrNullString()));
-            return initialValue;
-        } else {
-            // async may not return results immediately, so may need an async get
-            assertThat(id, is(not(emptyOrNullString())));
-            String isRunning = response.getHeader(HEADER_NAME_ASYNC_RUNNING);
-            if (Objects.equals(isRunning, "false")) {
-                // must have completed immediately so keep_on_completion must be true
-                assertThat(builder.keepOnCompletion(), is(true));
-            } else {
-                // did not return results immediately, so we will need an async get
-                // Also, different format modes return different results.
-                switch (format) {
-                    case "txt" -> assertThat(initialValue, emptyOrNullString());
-                    case "csv" -> {
-                        assertEquals(initialValue, "\r\n");
-                        initialValue = "";
-                    }
-                    case "tsv" -> {
-                        assertEquals(initialValue, "\n");
-                        initialValue = "";
-                    }
-                }
-            }
-            // issue a second request to "async get" the results
-            Request getRequest = prepareAsyncGetRequest(id);
-            if (delimiter != null) {
-                getRequest.addParameter("delimiter", String.valueOf(delimiter));
-            }
-            // If the `format` parameter is not added, the GET request will return a response
-            // with the `Content-Type` type due to the lack of an `Accept` header.
-            if (addParam) {
-                getRequest.addParameter("format", format);
-            }
-            // if `addParam` is false, `options` will already have an `Accept` header
-            getRequest.setOptions(options);
-            response = performRequest(getRequest);
-            entity = response.getEntity();
-        }
-        String newValue = Streams.copyToString(new InputStreamReader(entity.getContent(), StandardCharsets.UTF_8));
-
-        // assert initial contents, if any, are the same as async get contents
-        if (initialValue != null && initialValue.isEmpty() == false) {
-            assertEquals(initialValue, newValue);
-        }
-
-        assertDeletable(id);
-        return newValue;
     }
 
     private static Request prepareRequest(Mode mode) {
